--- a/index.html
+++ b/index.html
@@ -220,15 +220,9 @@
                         <button class="feature-card svelte-1chqpt0">
                            <center>
                               <img src="https://raw.githack.com/livrasand/livrasand.github.io/main/cdn/images/attendant-zoom.png" width="100%">
-                              <a role="button" href="https://github.com/livrasand/GoAttendant-Website/releases/download/v15.07.2023/Attendant.Zoom.Setup.exe" target="_blank" class="item svelte-10xsmud selected" data-sveltekit-preload-data="hover" style="margin-top:15px;width:125px;background: #1d1d1f;color: #fff;">
+                              <a role="button" href="https://www.recursosteocraticos.com/files/file/9415-attendant-zoom-2023-summer-edition/?do=download" target="_blank" class="item svelte-10xsmud selected" data-sveltekit-preload-data="hover" style="margin-top:15px;width:125px;background: #1d1d1f;color: #fff;">
                               <span>Descargar</span>
                               </a>
-                              <a role="button" href="https://github.com/livrasand/GoAttendant-Website/raw/main/goattendant-certificates.zip" class="button style-accent   svelte-nqc07q" style="cursor:pointer;background-color: var(--fds-subtle-fill-secondary);color: var(--fds-text-secondary);border: none;margin-top: 10px;">Descarga el Certificado de Firma de Código y de Exclusión de SmartScreen 
-                  </a>
-                               <section id="public" style="text-align: center;width: 100%;font-family: 'Space Mono', monospace;border: none;margin-top: -15px;margin-bottom: -30px;">
-    <h2>SHA-256 Checksum</h2>
-    <h3 class="selectable" style="margin-top:-10px;">2e1cd869f16b32494db561195469075b443c5b244fa947b1caf78a1fc3f224d5</h3>
-    </section>   
                               <br><br>
                               <div class="tc mh2 mv3 pv2">
                                  <span class="db ttu f7 b tracked mid-gray" style="font-size: 1rem;text-transform: uppercase;color: #555;letter-spacing: .1em;font-weight: bold;">Disponible solo para</span><br>
