--- a/index.html
+++ b/index.html
@@ -60,10 +60,17 @@
                     </div>
                 </header>
                 <!-- header -->
+                <!-- menu -->
+                <div id="boton-flotante">
+                  <a href="#" class="boton-flotante-icono">
+                    <img src="https://img.icons8.com/sf-regular-filled/48/equal-sign.png" alt="equal-sign"/>
+                </a>
+                </div>
+                <!-- menu -->
                 <!-- banner -->
                 <section class="ds-banner-section ds-content-width">                
                     <h1 class="ds-heading"><span>Hello! I'm Livrädo Sandoval</span></h1>
-                    <p>Apasionado programador y amante del minimalismo. Creativo con un toque de hacking ético. En mi tiempo libre, escribo en <a href="https://medium.com/@livrasand" target="_blanck">Medium</a> sobre temas fascinantes, desde reflexiones profundas hasta tecnología innovadora. Explora mis proyectos en GitHub: <a href="https://github.com/livrasand/Reviw" target="_blanck">Reviw</a>, <a href="https://github.com/livrasand/Attendant-Zoom" target="_blanck">Attendant Zoom</a> y <a href="https://github.com/livrasand/Kingdom-Hall-Attendant" target="_blanck">Kingdom Hall Attendant</a>. Junto a mi amada esposa, encontramos refugio en una humilde morada en las costas de México, rodeados de historias antiguas y la majestuosidad de la Sierra Madre Occidental.</p>
+                    <p>Apasionado programador, diseñador gráfico y amante del té. Creativo con un toque de hacker ético y cracker. En mi tiempo libre escribo en <a href="https://medium.com/@livrasand" target="_blanck">Medium</a>. Creo contenido en <a href="http://www.youtube.com/@livrasand" target="_blanck">YouTube</a> sobre mi software, cracking y hacking. Explora mis proyectos en GitHub: <a href="https://github.com/livrasand/Reviw" target="_blanck">Reviw</a>, <a href="https://github.com/livrasand/Attendant-Zoom" target="_blanck">Attendant Zoom</a> y <a href="https://github.com/livrasand/Kingdom-Hall-Attendant" target="_blanck">Kingdom Hall Attendant</a>. Junto a mi amada esposa, encontramos refugio en una humilde morada en las costas de México, rodeados de historias antiguas y la majestuosidad de la Sierra Madre Occidental.</p>
                 </section>                
                 <h4>Add-on custom publications for the JW Library app:</h4>
                 <p>Diseñados y creados por ti...</p>
@@ -72,8 +79,7 @@
                             <!-- El contenido dinámico se cargará aquí -->
                         </div>
                     </div>                    
-                <h4>Contributors:</h4>
-                <div id="contributor-list" style="width: 100%;min-width: 100%;"></div>
+               
             </div>
           </div>
       </div>
@@ -94,7 +100,7 @@
                         <li><a href="https://facebook.com/livrasand/" target="_blanck"><i class="ri-facebook-line"></i></a></li>
                         <li><a href="https://github.com/livrasand/" target="_blanck"><i class="ri-github-line"></i></a></li>
                         <li><a href="https://medium.com/@livrasand" target="_blanck"><i class="ri-medium-line"></i></a></li>
-                        <li><a href="https://www.youtube.com/channel/UC3j3G73t73Dook57HkAD52Q" target="_blanck"><i class="ri-youtube-line"></i></a></li>
+                        <li><a href="http://www.youtube.com/@livrasand" target="_blanck"><i class="ri-youtube-line"></i></a></li>
                     </ul>
                 </div>
             </div>
