--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <!-- banner -->
                 <section class="ds-banner-section ds-content-width">                
                     <h1 class="ds-heading"><span>Hello! I'm Livrädo Sandoval</span></h1>
-                    <p>Apasionado programador, diseñador gráfico y amante del té. Creativo con un toque de hacker ético y cracker. En mi tiempo libre escribo en <a href="https://medium.com/@livrasand" target="_blanck">Medium</a>. Creo contenido en <a href="http://www.youtube.com/@livrasand" target="_blanck">YouTube</a> sobre mi software, cracking y hacking. Explora mis proyectos en GitHub: <a href="https://github.com/livrasand/Reviw" target="_blanck">Reviw</a>, <a href="https://github.com/livrasand/Attendant-Zoom" target="_blanck">Attendant Zoom</a> y <a href="https://github.com/livrasand/Kingdom-Hall-Attendant" target="_blanck">Kingdom Hall Attendant</a>. Junto a mi amada esposa, encontramos refugio en una humilde morada en las costas de México, rodeados de historias antiguas y la majestuosidad de la Sierra Madre Occidental.</p>
+                    <p>Apasionado programador, diseñador gráfico y amante del té. Creativo con un toque de hacker ético y cracker. En mi tiempo libre escribo en mi tienda en línea <a href="https://livrasand.gumroad.com/" target="_blank">Gumroad</a>. Creo contenido en <a href="http://www.youtube.com/@livrasand" target="_blank">YouTube</a> sobre mi software, cracking y hacking. Explora mis proyectos en GitHub: <a href="https://github.com/livrasand/Reviw" target="_blank">Reviw</a>, <a href="https://github.com/livrasand/Attendant-Zoom" target="_blank">Attendant Zoom</a>, <a href="https://github.com/livrasand/Kingdom-Hall-Attendant" target="_blank">Kingdom Hall Attendant</a> y <a href="https://github.com/livrasand/CAD-Hub" target="_blank">CAD Hub</a>. Junto a mi amada esposa, encontramos refugio en una humilde morada en las costas de México, rodeados de historias antiguas y la majestuosidad de la Sierra Madre Occidental.</p>
                 </section>                
                 <h4>Add-on custom publications for the JW Library app:</h4>
                 <p>Diseñados y creados por ti...</p>
@@ -99,7 +99,6 @@
                     <ul class="ds-social">
                         <li><a href="https://facebook.com/livrasand/" target="_blanck"><i class="ri-facebook-line"></i></a></li>
                         <li><a href="https://github.com/livrasand/" target="_blanck"><i class="ri-github-line"></i></a></li>
-                        <li><a href="https://medium.com/@livrasand" target="_blanck"><i class="ri-medium-line"></i></a></li>
                         <li><a href="http://www.youtube.com/@livrasand" target="_blanck"><i class="ri-youtube-line"></i></a></li>
                     </ul>
                 </div>
