--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             margin-right: -80%;
         }
 
+       @media (max-width: 768px) {
+  figure {
+    margin-right: 0; /* Ajuste para reducir el margen derecho */
+  }
+}
+
         img {
             margin: 0;
             padding: 0;
