--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ display: flex; flex-direction: column;
                 <!-- banner -->
                 <section class="ds-banner-section ds-content-width">                
                     <h1 class="ds-heading"><span>Hello! I'm Livrädo Sandoval</span></h1>
-                    <p>I'm full stack software developer coding in Python, Electron and Go. Diseñador gráfico y obsesionado con el café, aparece en casi en todos mis vídeos, es el combustible que hay detrás de todas las aventuras. Compra café o mercadería en mi tienda en línea, o lee mis artículos en <a href="https://livrasand.gumroad.com/" target="_blank">Gumroad</a>. Creo contenido en <a href="http://www.youtube.com/@livrasand" target="_blank">YouTube</a> sobre mi software. Explora mis proyectos en GitHub: <a href="https://github.com/livrasand/Reviw" target="_blank">Reviw</a>, <a href="https://github.com/livrasand/Attendant-Zoom" target="_blank">Attendant Zoom</a>, <a href="https://github.com/livrasand/Kingdom-Hall-Attendant" target="_blank">Kingdom Hall Attendant</a> y <a href="https://github.com/livrasand/CAD-Hub" target="_blank">CAD Hub</a>. Junto a mi amada esposa, encontramos refugio en una humilde morada en las costas de México, rodeados de historias antiguas y la majestuosidad de la Sierra Madre Occidental.</p>
+                    <p>I'm full stack software developer coding in Python, Electron and Go. Diseñador gráfico y obsesionado con el café, aparece en casi en todos mis vídeos, es el combustible que hay detrás de todas las aventuras. Explora mis proyectos en GitHub: <a href="https://github.com/livrasand/Reviw" target="_blank">Reviw</a>, <a href="https://github.com/livrasand/Attendant-Zoom" target="_blank">Attendant Zoom</a>, <a href="https://github.com/livrasand/Kingdom-Hall-Attendant" target="_blank">Kingdom Hall Attendant</a> y <a href="https://github.com/livrasand/CAD-Hub" target="_blank">CAD Hub</a>. Junto a mi amada esposa, encontramos refugio en una humilde morada en las costas de México, rodeados de historias antiguas y la majestuosidad de la Sierra Madre Occidental.</p>
                 </section>  
                 
          
@@ -131,10 +131,10 @@ display: flex; flex-direction: column;
             <div class="col-12 col-sm-12  col-md-12  col-lg-10  col-xl-10  col-xxl-10">
                 <section class="ds-lets_section">
                   <h4>Open source</h4>
-                  <span>Mi software es de código abierto en GitHub. Las contribuciones y comentarios son bienvenidos.</span>
+                  <span>Mi software es de código abierto. Las contribuciones son bienvenidas.</span>
                 </section>
                 <div class="ds-email_social">
-                    <a href="mailto:livrasand@outlook.com" class="ds-email ds-boder_text"><span>livrasand@outlook.com</span></a>
+                    <a href="mailto:livrasand@outlook.com" class="ds-email ds-boder_text"><span>livrasand@</span></a>
                     <ul class="ds-social">
                         <li><a href="https://facebook.com/livrasand/" target="_blanck"><i class="ri-facebook-line"></i></a></li>
                         <li><a href="https://github.com/livrasand/" target="_blanck"><i class="ri-github-line"></i></a></li>
