--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <meta name="description" content="I'm full stack software developer coding in Python, Electron and Go. Publicaciones JWPUB personalizadas complementarias para la aplicación JW Library.">
+     <meta name="description" content="I'm full stack software developer coding in Python, JavaScript and Go. Publicaciones JWPUB personalizadas complementarias para la aplicación JW Library.">
     <!-- Google Fots -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -86,7 +86,7 @@ display: flex; flex-direction: column;
                 <!-- banner -->
                 <section class="ds-banner-section ds-content-width">                
                     <h1 class="ds-heading"><span>Hello! I'm Livrädo Sandoval</span></h1>
-                    <p>I'm full stack software developer coding in Python, Electron and Go. Diseñador gráfico y obsesionado con el café, aparece en casi en todos mis vídeos, es el combustible que hay detrás de todas las aventuras. Explora mis proyectos en GitHub: <a href="https://github.com/livrasand/Reviw" target="_blank">Reviw</a>, <a href="https://github.com/livrasand/Attendant-Zoom" target="_blank">Attendant Zoom</a>, <a href="https://github.com/livrasand/Kingdom-Hall-Attendant" target="_blank">Kingdom Hall Attendant</a> y <a href="https://github.com/livrasand/CAD-Hub" target="_blank">CAD Hub</a>. Junto a mi amada esposa, encontramos refugio en una humilde morada en las costas de México, rodeados de historias antiguas y la majestuosidad de la Sierra Madre Occidental.</p>
+                    <p>I'm full stack software developer coding in Python, JavaScript and Go. En mi tiempo libre, tengo un gran interés en la ciberseguridad, específicamente en el análisis de vulnerabilidades y en el estudio de técnicas de seguridad informática. Diseñador gráfico y obsesionado con el café, es el combustible que hay detrás de todas las aventuras. Explora mis proyectos en GitHub: <a href="https://github.com/livrasand/Reviw" target="_blank">Reviw</a>, <a href="https://github.com/livrasand/Attendant-Zoom" target="_blank">Attendant Zoom</a>, <a href="https://github.com/livrasand/Kingdom-Hall-Attendant" target="_blank">Kingdom Hall Attendant</a>, <a href="https://github.com/livrasand/CAD-Hub" target="_blank">CAD Hub</a>, <a href="https://github.com/livrasand/RemoveMediumPaywall">Remove Medium Paywall</a>, y mi más reciente <a href="https://livrasand.github.io/kingdom_hall_attendant_auth_api/"></a>Sign in with Kingdom Hall Attendant API</a>. Te invito a considerar apoyar económicamente mis proyectos en <a href="https://opencollective.com/kingdom-hall-attendant">OpenCollective</a>. Tu contribución puede hacer una gran diferencia en el desarrollo y la mejora continua de estos proyectos. Agradezco de antemano cualquier apoyo que puedas brindar. Además, te invito a explorar mis proyectos en CodePen. Podrías encontrar ideas interesantes que puedan inspirarte o ser útiles para tus propios proyectos. Junto a mi amada esposa, encontramos refugio en una humilde morada en las costas de México, rodeados de historias antiguas y la majestuosidad de la Sierra Madre Occidental.</p>
                 </section>  
                 
          
