--- a/index.html
+++ b/index.html
@@ -73,10 +73,31 @@ display: flex; flex-direction: column;
             <div class="col-12 col-sm-12  col-md-12  col-lg-10  col-xl-10  col-xxl-10">
                 <!-- header -->
                 <header class="ds-header">
-                   <div style="display: flex; justify-content: space-between;">
-                      <a class="ds-logo" href="https://livrasand.github.io"><img src="assets/images/hand-wave.svg" style="width: 77px;"></a>
-                      <img src="assets/images/104039397.jpg" style="border-radius: 42%; width: 77px;">
+                  <nav class="navbar navbar-expand-lg navbar-light">
+                    <div class="container-fluid">
+                      <a class="navbar-brand" href="https://livrasand.github.io">
+                        <img src="assets/images/104039397.jpg" style="border-radius: 42%; width: 77px;"> </a>
+                      <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="navbar-collapse collapse" id="navbarNav" style="">
+                        <ul class="navbar-nav ms-auto">
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">JWPUBs Catalog</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="https://www.getkha.org">KHA</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="https://www.cadhub.org">CADHub</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="https://github.com/livrasand/Reviw">Reviw</a>
+                          </li>
+                        </ul>
+                      </div>
                     </div>
+                  </nav>
                 </header>
                 <!-- header -->
                 <!-- menu 
