--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ display: flex; flex-direction: column;
                 <!-- banner -->
                 <section class="ds-banner-section ds-content-width">                
                     <h1 class="ds-heading"><span>Hello! I'm Livrädo Sandoval</span></h1>
-                    <p>I'm full stack software developer coding in Python, JavaScript and Go. En mi tiempo libre, tengo un gran interés en la ciberseguridad, específicamente en el análisis de vulnerabilidades y en el estudio de técnicas de seguridad informática. Diseñador gráfico y obsesionado con el café, es el combustible que hay detrás de todas las aventuras. Explora mis proyectos en GitHub. Te invito a considerar apoyar económicamente mis proyectos en <a href="https://opencollective.com/kingdom-hall-attendant">OpenCollective</a>. Tu contribución puede hacer una gran diferencia en el desarrollo y la mejora continua de estos proyectos. Agradezco de antemano cualquier apoyo que puedas brindar.</p>
+                    <p>I'm full stack software developer coding in Python, JavaScript and Go. En mi tiempo libre, tengo un gran interés en la ciberseguridad, específicamente en el análisis de vulnerabilidades y en el estudio de técnicas de seguridad informática. Diseñador gráfico y obsesionado con el café, es el combustible que hay detrás de todas las aventuras.</p>
                 </section>  
                 
          
